2017-09-03  Daniel J Sebald <daniel.sebald@ieee.org>

	* configure.ac:  Use AC_MSG_RESULT rather than AC_MSG_WARN to report
	which Qt version will be used.

2017-09-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (xstrftime):  The variant format specs for time
	%tH %tM did not behave as documented in that hours wrapped at 24 and
	minutes at 60 if the decimal precision modifier was missing.

2017-09-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (parse_range eval_link_function) docs/gnuplot.doc:
	Attempt to handle the case of linked axes (x+x2 or y+y2) and an in-line
	range specifier in the plot statement.  This fix only addresses simple
	cases, such as
	    set link x2;  plot [x=min:max] something-using-x2 axes x2y1
	Recommend to use separate "set xrange ... set yrange ..." instead.

2017-09-01  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/winmain.c (ConsoleHandler):  Install the console handler
	also for wgnuplot and wgnuplot_pipes.  Avoids segfaults when closing
	the wgnuplot_pipes console window or the caca terminal console window.

2017-08-31  Martin Saturka  <kvutza@users.sf.net>

	* src/mousecmn.h src/mouse.c:  Bind the < and > keys to change the
	current azimuth setting while mousing 3D plots.
	(EAM) add an internal flag "Opt-" so that you can bind a hotkey for
	which the Alt and Ctrl modifiers are optional rather than required.

2017-08-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile:  Fix target name of generated dependencies
	for pipe and console targets.

2017-08-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/graphics.c src/interpol.c src/plot2d.c
	src/plot3d.c: Revise macro name STORE_WITH_LOG_AND_UPDATE_RANGE to
	STORE_AND_UPDATE_RANGE since we no longer handle log scaling at the
	time data is stored.  Take this opportunity to remove an unused
	parameter (OUT_ACTION) from the macro. Go back to using the same
	macro for the COLOR_AXIS that we use for all other axes.