@@ -1,5 +1,5 @@
 /*
- * $Id: util.h,v 1.52 2017/06/18 20:38:38 sfeam Exp $
+ * $Id: util.h,v 1.53 2017/07/07 00:02:33 sfeam Exp $
  */
 
 /* GNUPLOT - util.h */
@@ -69,6 +69,8 @@ extern TBOOLEAN use_micro;
 extern TBOOLEAN use_minus_sign;
 
 extern const char *current_prompt; /* needed by is_error() and friends */
+
+extern int debug;
 
 /* Functions exported by util.c: */
 
