@@ -1,3 +1,11 @@
+2017-09-04  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/set.c src/tables.c src/tables.h src/unset.c src/util.c
+	src/util.h src/show.c:  Developer-only command "set debug <val>"
+	intended to facilitate A/B testing of new code.  Trial code can be
+	wrapped in a test such as
+	    if (debug > 0) { execute trial code }
+
 2017-09-03  Daniel J Sebald <daniel.sebald@ieee.org>
 
 	* configure.ac:  Use AC_MSG_RESULT rather than AC_MSG_WARN to report
